--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -11,11 +13,11 @@ body {
 }
 
 body {
-  background-color: #e6ebec;
-  font-family: "pretendard";
+    background-color: $background-color;
+    font-family: 'pretendard';
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}/*# sourceMappingURL=globals.css.map */
+}
