--- a/styles/pages/Home/Home.module.css
+++ b/styles/pages/Home/Home.module.css
@@ -1,4 +1,5 @@
 .video_box {
+  position: relative;
   height: calc(100vh - 70px - 25px);
   width: calc(100% - 50px);
   background-color: rgb(190, 190, 190);
@@ -12,23 +13,24 @@
 }
 
 .video {
-  width: 100%;
-  margin: auto;
+  position: absolute;
+  width: auto;
   height: 100%;
-  transform: scale(1.5);
-  z-index: 2;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1.35);
 }
 
 .video_text_box {
   position: absolute;
-  width: calc(100% - 50px);
+  width: 100%;
   height: calc(100vh - 70px - 25px);
-  left: 25px;
   background-color: rgba(50, 50, 50, 0.7);
   -webkit-backdrop-filter: blur(7px);
           backdrop-filter: blur(7px);
   border-radius: 30px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .video_text {
@@ -65,52 +67,4 @@
   bottom: 20px;
   left: 50%;
   margin-left: -10px;
-}
-
-@media (max-width: 1055px) {
-  .video {
-    transform: scale(1.65);
-  }
-}
-@media (max-width: 950px) {
-  .video {
-    transform: scale(3);
-  }
-}
-@media (max-width: 655px) {
-  .video {
-    transform: scale(3.35);
-  }
-  .video_text {
-    font-size: 23px;
-  }
-  .video_top_text {
-    font-size: 23px;
-  }
-}
-@media (max-width: 470px) {
-  .video {
-    transform: scale(3.75);
-  }
-}
-@media (max-width: 410px) {
-  .video {
-    transform: scale(4.5);
-  }
-}
-@media (max-width: 305px) {
-  .video {
-    transform: scale(5);
-  }
-  .video_text {
-    font-size: 20px;
-  }
-  .video_top_text {
-    font-size: 20px;
-  }
-}
-@media (max-width: 295px) {
-  .video {
-    transform: scale(5.15);
-  }
 }/*# sourceMappingURL=Home.module.css.map */
