--- a/styles/pages/Home/Home.module.scss
+++ b/styles/pages/Home/Home.module.scss
@@ -1,6 +1,7 @@
 @import '../../variables';
 
 .video_box {
+    position: relative;
     height: calc(100vh - #{$header-height} - 25px);
     width: calc(100% - 50px);
     background-color: rgb(190, 190, 190);
@@ -12,22 +13,23 @@
 }
 
 .video {
-    width: 100%;
-    margin: auto;
+    position: absolute;
+    width: auto;
     height: 100%;
-    transform: scale(1.5);
-    z-index: 2;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1.35);
 }
 
 .video_text_box {
     position: absolute;
-    width: calc(100% - 50px);
+    width: 100%;
     height: calc(100vh - #{$header-height} - 25px);
-    left: 25px;
     background-color: rgba(50, 50, 50, 0.7);
     backdrop-filter: blur(7px);
     border-radius: 30px;
-    z-index: 1;
+    z-index: 2;
 }
 
 .video_text {
@@ -67,50 +69,55 @@
     margin-left: -10px;
 }
 
-@media (max-width: 1055px) {
-    .video {
-        transform: scale(1.65);
-    }
-}
-@media (max-width: 950px) {
-    .video {
-        transform: scale(3.0);
-    }
-}
-@media (max-width: 655px) {
-    .video {
-        transform: scale(3.35);
-    }
-    .video_text {
-        font-size: 23px;
-    }
-    .video_top_text {
-        font-size: 23px;
-    }
-}
-@media (max-width: 470px) {
-    .video {
-        transform: scale(3.75);
-    }
-}
-@media (max-width: 410px) {
-    .video {
-        transform: scale(4.5);
-    }
-}
-@media (max-width: 305px) {
-    .video {
-        transform: scale(5);
-    }
-    .video_text {
-        font-size: 20px;
-    }
-    .video_top_text {
-        font-size: 20px;
-    }
-}
-@media (max-width: 295px) {
-    .video {
-        transform: scale(5.15);
-    }
-}
+// @media (max-width: 1055px) {
+//     .video {
+//         transform: scale(1.65);
+//     }
+// }
+// @media (max-width: 950px) {
+//     .video {
+//         transform: scale(3.0);
+//     }
+// }
+// @media (max-width: 655px) {
+//     .video {
+//         transform: scale(3.35);
+//     }
+//     .video_text {
+//         font-size: 20px;
+//     }
+//     .video_top_text {
+//         font-size: 20px;
+//     }
+// }
+// @media (max-width: 470px) {
+//     .video {
+//         transform: scale(3.75);
+//     }
+// }
+// @media (max-width: 410px) {
+//     .video {
+//         transform: scale(4.5);
+//     }
+// }
+// @media (max-width: 305px) {
+//     .video {
+//         transform: scale(5);
+//     }
+//     .video_text {
+//         font-size: 20px;
+//     }
+//     .video_top_text {
+//         font-size: 20px;
+//     }
+// }
+// @media (max-width: 295px) {
+//     .video {
+//         transform: scale(5.15);
+//     }
+// }
+// @media (max-height: 575px) {
+//     // .video {
+//     //     height: ;
+//     // }
+// }
