--- a/styles/pages/Home/Home.module.css
+++ b/styles/pages/Home/Home.module.css
@@ -19,7 +19,12 @@
   z-index: 1;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1.35);
+  transform: translate(-50%, -50%) scale(1.25);
+}
+
+.video_bug {
+  width: 100%;
+  height: auto;
 }
 
 .video_text_box {
