--- a/styles/pages/Home/Home.module.scss
+++ b/styles/pages/Home/Home.module.scss
@@ -19,7 +19,12 @@
     z-index: 1;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(1.35);
+    transform: translate(-50%, -50%) scale(1.25);
+}
+
+.video_bug {
+    width: 100%;
+    height: auto;
 }
 
 .video_text_box {
@@ -68,56 +73,3 @@
     left: 50%;
     margin-left: -10px;
 }
-
-// @media (max-width: 1055px) {
-//     .video {
-//         transform: scale(1.65);
-//     }
-// }
-// @media (max-width: 950px) {
-//     .video {
-//         transform: scale(3.0);
-//     }
-// }
-// @media (max-width: 655px) {
-//     .video {
-//         transform: scale(3.35);
-//     }
-//     .video_text {
-//         font-size: 20px;
-//     }
-//     .video_top_text {
-//         font-size: 20px;
-//     }
-// }
-// @media (max-width: 470px) {
-//     .video {
-//         transform: scale(3.75);
-//     }
-// }
-// @media (max-width: 410px) {
-//     .video {
-//         transform: scale(4.5);
-//     }
-// }
-// @media (max-width: 305px) {
-//     .video {
-//         transform: scale(5);
-//     }
-//     .video_text {
-//         font-size: 20px;
-//     }
-//     .video_top_text {
-//         font-size: 20px;
-//     }
-// }
-// @media (max-width: 295px) {
-//     .video {
-//         transform: scale(5.15);
-//     }
-// }
-// @media (max-height: 575px) {
-//     // .video {
-//     //     height: ;
-//     // }
-// }
