홈화면 디자인 수정

--- a/styles/pages/Home/Home.module.scss
+++ b/styles/pages/Home/Home.module.scss
@@ -60,10 +60,11 @@
 }
 
 .highlight {
-    background-color: black;
-    color: white;
-    padding: 7px 10px;
+    background-color: rgb(255, 255, 255);
+    color: black;
+    padding: 5px 8px;
     border-radius: 15px;
+    font-weight: 700;
 }
 
 .down_arrow {
