홈 화면 디자인 수정

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -3,4 +3,5 @@
 $background-color: #e6ebec;
 
 // Header
+$header-background-color: rgba(230, 235, 236, 0.45); // Global:background-color 와 같은 색상
 $header-height: 70px;
