--- a/styles/components/Header/Header.module.css
+++ b/styles/components/Header/Header.module.css
@@ -1,7 +1,16 @@
 .header {
+  display: fixed;
+  position: absolute;
   width: 100%;
   height: 70px;
-  background-color: #e6ebec;
+  background-color: rgba(230, 235, 236, 0.45);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  z-index: 3;
+}
+
+.header_space {
+  height: 70px;
 }
 
 .title_box {
