--- a/styles/components/Header/Header.module.scss
+++ b/styles/components/Header/Header.module.scss
@@ -1,9 +1,17 @@
 @import '../../variables';
 
 .header {
+    display: fixed;
+    position: absolute;
     width: 100%;
     height: $header-height;
-    background-color: $background-color;
+    background-color: $header-background-color;
+    backdrop-filter: blur(10px);
+    z-index: 3;
+}
+
+.header_space {
+    height: $header-height;
 }
 
 .title_box {
