--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,6 +6,10 @@
   margin: 0;
 }
 
+// :root {
+//   --vh: 100%;
+// }
+
 html,
 body {
   max-width: 100vw;
@@ -13,8 +17,8 @@ body {
 }
 
 body {
-    background-color: $background-color;
-    font-family: 'pretendard';
+  background-color: $background-color;
+  font-family: 'pretendard';
 }
 
 a {
