메인 페이지 영상 변경

--- a/styles/components/Header/Header.module.scss
+++ b/styles/components/Header/Header.module.scss
@@ -16,9 +16,8 @@
 
 .title_box {
     position: absolute;
-    left: 25px;
-    margin: auto;
-    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .title {
