--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -6,10 +6,6 @@
   margin: 0;
 }
 
-// :root {
-//   --vh: 100%;
-// }
-
 html,
 body {
   max-width: 100vw;
@@ -24,4 +20,18 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+// 평창평화체
+@font-face {
+  font-family: 'PyeongChangPeace-Bold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/PyeongChangPeace-Bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'PyeongChangPeace-Light';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/PyeongChangPeace-Light.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
 }
