메인 화면 수정 및 동아리 페이지 생성

--- a/styles/pages/Main/Main.module.scss
+++ b/styles/pages/Main/Main.module.scss
@@ -156,6 +156,15 @@
     text-align: left;
 }
 
+.emoji_font {
+    // font-size: 27px;
+    width: 27px;
+}
+
+.warp_big_text_line {
+    float: left;
+}
+
 #club {
     color: white;
     background: #8E2DE2;
