--- a/styles/pages/Main/Main.module.css
+++ b/styles/pages/Main/Main.module.css
@@ -161,6 +161,14 @@
   text-align: left;
 }
 
+.emoji_font {
+  width: 27px;
+}
+
+.warp_big_text_line {
+  float: left;
+}
+
 #club {
   color: white;
   background: #8E2DE2;
@@ -175,4 +183,4 @@
   background: linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);
   border: 1px solid rgb(25, 156, 123);
   box-shadow: 0px 7px 15px 2px rgba(30, 230, 180, 0.7);
-}/*# sourceMappingURL=Home.module.css.map */
+}/*# sourceMappingURL=Main.module.css.map */
