--- a/styles/components/ServiceHeader/ServiceHeader.module.scss
+++ b/styles/components/ServiceHeader/ServiceHeader.module.scss
@@ -10,6 +10,7 @@
     justify-content: left;
     align-items: center;
     flex-direction: row;
+    overflow: hidden;
 }
 
 .header_space {
@@ -39,7 +40,7 @@
     float: left;
     margin-left: 30px;
     height: $service-header-height;
-    width: 300px;
+    // width: 300px;
     display: flex;
     align-items: left;
     justify-content: left;
@@ -67,4 +68,28 @@
     text-underline-offset: 10px;
     text-decoration-color: black;
     // text-decoration-thickness: 1px;
+}
+
+.drawer_button {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .menu_box, .menu_item {
+        display: none;
+    }
+    .title {
+        margin: auto;
+        position: relative;
+        left:50%;
+        transform: translateX(-50%);
+    }
+
+    .drawer_button {
+        display: block;
+        // float: left;
+        margin-top: 20px;
+        margin-left: 20px;
+        position: absolute;
+    }
 }
