ServiceHeader에 모바일 화면 Drawer 추가

--- a/styles/components/ServiceHeader/ServiceHeader.module.css
+++ b/styles/components/ServiceHeader/ServiceHeader.module.css
@@ -9,7 +9,7 @@
   justify-content: left;
   align-items: center;
   flex-direction: row;
-  overflow: hidden;
+  z-index: 5;
 }
 
 .header_space {
@@ -79,6 +79,10 @@
   display: none;
 }
 
+.drawer_box {
+  display: none;
+}
+
 @media (max-width: 768px) {
   .menu_box, .menu_item {
     display: none;
@@ -88,11 +92,20 @@
     position: relative;
     left: 50%;
     transform: translateX(-50%);
+    width: calc(100% - 50px);
   }
   .drawer_button {
     display: block;
-    margin-top: 20px;
     margin-left: 20px;
-    position: absolute;
+    position: relative;
+    z-index: 150 !important;
+  }
+  .drawer_box {
+    display: block;
+    position: relative;
+    z-index: 15 !important;
+  }
+  .drawer {
+    position: relative;
   }
 }/*# sourceMappingURL=ServiceHeader.module.css.map */
