--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,4 +31,8 @@ a {
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2206-02@1.0/PyeongChangPeace-Light.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
+}
+.EZDrawer {
+  position: relative;
+  z-index: 10 !important;
 }/*# sourceMappingURL=globals.css.map */
