배포 오류 수정

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,4 +35,8 @@ a {
 .EZDrawer {
   position: relative;
   z-index: 10 !important;
+}
+
+.burger .burger-lines, .burger .burger-lines:after, .burger .burger-lines:before {
+  background-color: black;
 }/*# sourceMappingURL=globals.css.map */
