--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -40,3 +40,7 @@ a {
   position: relative;
   z-index: 10 !important;
 }
+
+.burger .burger-lines, .burger .burger-lines:after, .burger .burger-lines:before {
+  background-color: black;
+}
