--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,6 +1,7 @@
 
 // Global
 $background-color: #e6ebec;
+$page-width: 685px;
 
 // Header
 $header-background-color: rgba(230, 235, 236, 0.45); // Global:background-color 와 같은 색상
