--- a/styles/pages/Main/Main.module.css
+++ b/styles/pages/Main/Main.module.css
@@ -195,4 +195,12 @@
   background: linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);
   border: 1px solid rgb(25, 156, 123);
   box-shadow: 0px 7px 15px 2px rgba(30, 230, 180, 0.7);
+}
+
+#music {
+  color: black;
+  background: #11998e;
+  background: linear-gradient(to right, #38ef7d, #11998e);
+  border: 1px solid #26a356;
+  box-shadow: 0px 7px 15px 2px rgba(34, 211, 102, 0.7);
 }/*# sourceMappingURL=Main.module.css.map */
