BottomNav 구조 수정

--- a/styles/components/AlertBar/AlertBar.module.css
+++ b/styles/components/AlertBar/AlertBar.module.css
@@ -1,15 +1,49 @@
-.alert_bar {
-  width: 100%;
+.container {
+  text-align: center;
 }
 
-@media (max-width: 0px) {
-  .alert_bar {
-    width: calc(100% - 30px);
+.box {
+  display: inline-block;
+  padding-right: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  min-height: 30px;
+  border-radius: 50px;
+  height: auto;
+  max-width: 1070px;
+  margin: 0 auto;
+}
+
+.alert_bar {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.icon {
+  padding-left: 25px;
+  padding-right: 25px;
+  position: relative;
+  top: 50%;
+  vertical-align: middle;
+}
+
+.text {
+  text-align: left;
+  font-family: "pretendard";
+  font-size: 17px;
+  font-weight: 500;
+}
+
+@media (max-width: 768px) {
+  .box {
+    width: calc(100% - 20px);
     margin: auto;
   }
 }
 #yellow {
   background-color: rgb(255, 255, 190);
   border: 1px solid rgb(255, 255, 80);
-  box-shadow: 0 3px 15px 0 rgba(255, 255, 80, 0.5);
+  box-shadow: 0 3px 15px 0 rgba(255, 255, 80, 0.3);
+  color: rgb(70, 70, 0);
 }/*# sourceMappingURL=AlertBar.module.css.map */
