--- a/styles/pages/auth/Join/Join.module.css
+++ b/styles/pages/auth/Join/Join.module.css
@@ -1,1 +1,95 @@
-/*# sourceMappingURL=Join.module.css.map */
+.box {
+  position: absolute;
+  width: 500px;
+  height: calc(100% - 70px - 15px);
+  background-color: rgb(255, 255, 255);
+  border-radius: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-tap-highlight-color: transparent;
+  padding: 30px;
+}
+
+.bottom_button {
+  position: absolute;
+  bottom: 15px;
+  width: calc(100% - 30px);
+  height: 70px;
+  margin-left: -15px;
+  background-color: rgb(0, 0, 0);
+  border-radius: 20px;
+  font-family: "pretendard";
+  font-weight: 600;
+  font-size: 18px;
+  text-align: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: pointer;
+  color: white;
+  line-height: 70px;
+  transition: all 0.35s;
+}
+.bottom_button:hover {
+  transition: all 0.35s;
+  scale: 1.01;
+}
+.bottom_button:active {
+  transition: all 0.35s;
+  scale: 0.97;
+}
+
+.title {
+  text-align: left;
+  font-family: "pretendard";
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.title_info {
+  text-align: left;
+  margin-top: 5px;
+  font-size: 13px;
+  color: rgb(130, 130, 130);
+}
+
+.space {
+  height: 20px;
+}
+
+.intro_text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: calc(100% - 50px - 45px - 15px);
+  text-align: center;
+  font-weight: 800;
+  font-size: 25px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+#intro_1 {
+  background: linear-gradient(to right, #8a2387, #e94057, #f27121);
+  color: transparent;
+  -webkit-background-clip: text;
+          background-clip: text;
+}
+
+#intro_2 {
+  font-weight: 700;
+}
+
+@media (max-width: 560px) {
+  .box {
+    width: calc(100% - 30px);
+    margin: auto;
+  }
+  .space {
+    height: 15px;
+  }
+}/*# sourceMappingURL=Join.module.css.map */
