join 화면 디자인 수정

--- a/styles/pages/auth/Join/Join.module.scss
+++ b/styles/pages/auth/Join/Join.module.scss
@@ -69,6 +69,10 @@
     user-select: none;
 }
 
+.intro_emoji {
+    width: 50px;
+}
+
 #intro_1 {
     background: linear-gradient(to right, #8a2387, #e94057, #f27121);
     color: transparent;
