join 다음 페이지 준비

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,4 +35,20 @@ a {
 .EZDrawer {
   position: relative;
   z-index: 10 !important;
+}
+
+:root {
+  --rsbs-backdrop-bg: rgba(0, 0, 0, 0.6);
+  --rsbs-max-w: auto;
+  --rsbs-ml: env(safe-area-inset-left);
+  --rsbs-mr: env(safe-area-inset-right);
+  --rsbs-overlay-rounded: 16px;
+}
+
+@media (min-width: 500px) {
+  :root {
+    --rsbs-max-w: 500px;
+    --rsbs-ml: auto;
+    --rsbs-mr: auto;
+  }
 }/*# sourceMappingURL=globals.css.map */
