--- a/styles/components/Header/Header.module.css
+++ b/styles/components/Header/Header.module.css
@@ -1,11 +1,9 @@
 .header {
-  display: fixed;
   position: absolute;
   width: 100%;
   height: 70px;
   background-color: rgba(230, 235, 236, 0.45);
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
   z-index: 3;
 }
 
@@ -25,10 +23,7 @@
   font-weight: 700;
   text-align: center;
   line-height: 70px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  user-select: none;
   white-space: nowrap;
 }
 
@@ -39,4 +34,6 @@
   margin-right: 3px;
   margin-left: 5px;
   font-weight: 800;
-}/*# sourceMappingURL=Header.module.css.map */
+}
+
+/*# sourceMappingURL=Header.module.css.map */
