--- a/styles/pages/auth/Join/Join/Join.module.scss
+++ b/styles/pages/auth/Join/Join/Join.module.scss
@@ -1,14 +1,17 @@
 .box {
     position: absolute;
     width: 500px;
-    height: calc(100% - 70px - 15px); // 70px: header, 15px: bottom space
+    height: calc(100% - 70px); // 70px: header
     background-color: rgb(255, 255, 255);
-    border-radius: 20px;
+    //border-radius: 20px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
     left: 50%;
     transform: translateX(-50%);
     -webkit-tap-highlight-color: transparent;
     padding: 30px;
-    box-shadow: 5px 0px 50px 0 rgba(50, 50, 50, 0.3);
+    //box-shadow: 5px 0px 50px 0 rgba(50, 50, 50, 0.3);
+    border: 1px solid #d2d2d2;
 }
 
 .bottom_button {
@@ -21,7 +24,7 @@
     border-radius: 20px;
     font-family: 'pretendard';
     font-weight: 600;
-    font-size: 18px;
+    font-size: 15px;
     text-align: center;
     user-select: none;
     cursor: pointer;
@@ -43,7 +46,7 @@
 .title {
     text-align: left;
     font-family: 'pretendard';
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 700;
 }
 
@@ -66,7 +69,7 @@
     height: calc(100% - 50px - 45px - 15px);
     text-align: center;
     font-weight: 800;
-    font-size: 25px;
+    font-size: 23px;
     user-select: none;
 }
 
@@ -81,7 +84,7 @@
 }
 
 #intro_2 {
-    font-weight: 700;
+    font-weight: 300;
 }
 
 .fadein {
@@ -94,7 +97,6 @@
 
 .remove {
     display: none;
-    opacity: 0;
 }
 
 .terms {
@@ -104,7 +106,7 @@
 
 .terms_title {
     font-family: 'pretendard';
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 700;
     user-select: none;
 }
@@ -122,12 +124,12 @@
 .label {
     font-family: 'pretendard';
     font-weight: 500;
-    font-size: 17px;
+    font-size: 15px;
 }
 
 .all_select {
     width: 100%;
-    padding: 10px 20px;
+    padding: 5px 20px;
     background-color: rgb(240, 240, 240);
     border-radius: 20px;
 }
@@ -145,10 +147,20 @@
 
 .loading_text {
     font-family: 'pretendard';
-    font-weight: 700;
+    font-weight: 600;
     text-align: center;
-    margin: 30px;
-    font-size: 23px;
+    margin: 20px;
+    font-size: 20px;
+    background: linear-gradient(to right, #000428, #004e92);
+    color: transparent;
+    background-clip: text;
+}
+
+.loading_icon {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 50px;
 }
 
 @keyframes fadein {
