join 페이지 중 회원가입 폼 부분 완료

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,4 +51,6 @@ a {
     --rsbs-ml: auto;
     --rsbs-mr: auto;
   }
-}/*# sourceMappingURL=globals.css.map */
+}
+
+/*# sourceMappingURL=globals.css.map */
