--- a/styles/pages/auth/join/Class/Class.module.css
+++ b/styles/pages/auth/join/Class/Class.module.css
@@ -29,11 +29,41 @@
   color: black;
 }
 
+.helper {
+  font-family: "pretendard";
+  color: black;
+  font-weight: 500;
+}
+
 #highlight_purple {
   position: absolute;
   background: linear-gradient(to right, rgb(122, 122, 122), rgb(87, 78, 201));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.error {
+  width: 100%;
+  height: 50px;
+  background-color: #b40000;
+  border-radius: 5px;
+}
+.error > .icon {
+  float: left;
+  position: relative;
+  top: 50%;
+  color: white;
+  vertical-align: center;
+  margin: auto 15px;
+  margin-top: -10px;
+}
+.error > .text {
+  float: left;
+  font-family: "pretendard";
+  font-size: 17px;
+  color: white;
+  font-weight: 300;
+  line-height: 50px;
 }
 
 @media (max-width: 480px) {
@@ -42,4 +72,4 @@
   }
 }
 
-/*# sourceMappingURL=Join.module.css.map */
+/*# sourceMappingURL=Class.module.css.map */
