--- a/styles/pages/auth/join/Class/Class.module.scss
+++ b/styles/pages/auth/join/Class/Class.module.scss
@@ -3,6 +3,7 @@
   width: 480px;
   padding: 0 20px;
   margin: auto;
+  //background-color: red;
   height: auto;
   user-select: none;
 }
@@ -12,7 +13,7 @@
 }
 
 .title {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-weight: 800;
   font-size: 22px;
 }
@@ -22,11 +23,17 @@
 }
 
 .description {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-weight: 300;
   font-size: 15px;
   margin-top: 10px;
   color: black;
+}
+
+.helper {
+  font-family: 'pretendard';
+  color: black;
+  font-weight: 500;
 }
 
 #highlight_purple {
@@ -36,10 +43,34 @@
   -webkit-text-fill-color: transparent;
 }
 
+.error {
+  width: 100%;
+  height: 50px;
+  background-color: #b40000;
+  border-radius: 5px;
+
+  & > .icon {
+    float: left;
+    position: relative;
+    top: 50%;
+    color: white;
+    vertical-align: center;
+    margin: auto 15px;
+    margin-top: -10px;
+  }
+
+  & > .text {
+    float: left;
+    font-family: 'pretendard';
+    font-size: 17px;
+    color: white;
+    font-weight: 300;
+    line-height: 50px;
+  }
+}
+
 @media (max-width: 480px) {
   .box {
     width: 100%;
   }
 }
-
-/*# sourceMappingURL=Join.module.css.map */
