--- a/styles/components/Layout/Layout.module.css
+++ b/styles/components/Layout/Layout.module.css
@@ -3,11 +3,18 @@
 }
 
 .entered {
+  -webkit-transition: opacity 200ms ease-in-out, -webkit-transform 200ms ease-in-out;
+  transition: opacity 200ms ease-in-out, -webkit-transform 200ms ease-in-out;
   transition: opacity 200ms ease-in-out, transform 200ms ease-in-out;
+  transition: opacity 200ms ease-in-out, transform 200ms ease-in-out, -webkit-transform 200ms ease-in-out;
   opacity: 1;
 }
 
 .exiting {
+  -webkit-transition: opacity 200ms ease-in-out, -webkit-transform 200ms ease-in-out;
+  transition: opacity 200ms ease-in-out, -webkit-transform 200ms ease-in-out;
   transition: opacity 200ms ease-in-out, transform 200ms ease-in-out;
+  transition: opacity 200ms ease-in-out, transform 200ms ease-in-out, -webkit-transform 200ms ease-in-out;
   opacity: 0;
-}/*# sourceMappingURL=Layout.module.css.map */
+}
+/*# sourceMappingURL=Layout.module.css.map */
