--- a/styles/components/join/Inputs/Inputs.module.css
+++ b/styles/components/join/Inputs/Inputs.module.css
@@ -3,9 +3,8 @@
 }
 
 .helper {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   color: black;
   font-weight: 500;
 }
-
 /*# sourceMappingURL=Inputs.module.css.map */
