--- a/styles/pages/auth/join/Class/Class.module.css
+++ b/styles/pages/auth/join/Class/Class.module.css
@@ -4,7 +4,10 @@
   padding: 0 20px;
   margin: auto;
   height: auto;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .space {
@@ -12,7 +15,7 @@
 }
 
 .title {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-weight: 800;
   font-size: 22px;
 }
@@ -22,7 +25,7 @@
 }
 
 .description {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-weight: 300;
   font-size: 15px;
   margin-top: 10px;
@@ -30,14 +33,15 @@
 }
 
 .helper {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   color: black;
   font-weight: 500;
 }
 
 #highlight_purple {
   position: absolute;
-  background: linear-gradient(to right, rgb(122, 122, 122), rgb(87, 78, 201));
+  background: -webkit-gradient(linear, left top, right top, from(#7a7a7a), to(#574ec9));
+  background: linear-gradient(to right, #7a7a7a, #574ec9);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -48,6 +52,7 @@
   background-color: #b40000;
   border-radius: 5px;
 }
+
 .error > .icon {
   float: left;
   position: relative;
@@ -57,9 +62,10 @@
   margin: auto 15px;
   margin-top: -10px;
 }
+
 .error > .text {
   float: left;
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-size: 17px;
   color: white;
   font-weight: 300;
@@ -71,5 +77,4 @@
     width: 100%;
   }
 }
-
 /*# sourceMappingURL=Class.module.css.map */
