--- a/styles/pages/auth/join/Join/Join.module.css
+++ b/styles/pages/auth/join/Join/Join.module.css
@@ -4,7 +4,10 @@
   padding: 0 20px;
   margin: auto;
   height: auto;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .space {
@@ -12,7 +15,7 @@
 }
 
 .title {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-weight: 800;
   font-size: 22px;
 }
@@ -22,7 +25,7 @@
 }
 
 .description {
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-weight: 300;
   font-size: 15px;
   margin-top: 10px;
@@ -31,7 +34,8 @@
 
 #highlight_purple {
   position: absolute;
-  background: linear-gradient(to right, rgb(122, 122, 122), rgb(87, 78, 201));
+  background: -webkit-gradient(linear, left top, right top, from(#7a7a7a), to(#574ec9));
+  background: linear-gradient(to right, #7a7a7a, #574ec9);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -41,5 +45,4 @@
     width: 100%;
   }
 }
-
 /*# sourceMappingURL=Join.module.css.map */
