--- a/styles/components/BottomNav/BottomNav.module.css
+++ b/styles/components/BottomNav/BottomNav.module.css
@@ -11,14 +11,23 @@
     width: 100%;
     height: 55px;
     background-color: white;
-    box-shadow: 0 -2px 15px 0 rgba(200, 200, 200, 0.35);
-    border-top: 1px solid rgb(235, 235, 235);
+    -webkit-box-shadow: 0 -2px 15px 0 rgba(200, 200, 200, 0.35);
+            box-shadow: 0 -2px 15px 0 rgba(200, 200, 200, 0.35);
+    border-top: 1px solid #ebebeb;
   }
   .menu_box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: nowrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
   }
   .menu {
     -webkit-user-select: none;
@@ -38,4 +47,5 @@
     top: 50%;
     vertical-align: middle;
   }
-}/*# sourceMappingURL=BottomNav.module.css.map */
+}
+/*# sourceMappingURL=BottomNav.module.css.map */
