--- a/styles/components/Header/Header.module.css
+++ b/styles/components/Header/Header.module.css
@@ -3,7 +3,8 @@
   width: 100%;
   height: 70px;
   background-color: rgba(230, 235, 236, 0.45);
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
   z-index: 3;
 }
 
@@ -14,24 +15,28 @@
 .title_box {
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .title {
   font-size: 20px;
-  font-family: "pretendard";
+  font-family: 'pretendard';
   font-weight: 700;
   text-align: center;
   line-height: 70px;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   white-space: nowrap;
 }
 
 .highlight {
-  background: linear-gradient(to right, rgb(7, 0, 100), rgb(83, 71, 234));
+  background: -webkit-gradient(linear, left top, right top, from(#070064), to(#5347ea));
+  background: linear-gradient(to right, #070064, #5347ea);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 900;
 }
-
 /*# sourceMappingURL=Header.module.css.map */
