--- a/styles/pages/Main/Main.module.css
+++ b/styles/pages/Main/Main.module.css
@@ -3,7 +3,7 @@
   height: 500px;
   width: calc(100% - 30px);
   max-width: 685px;
-  background-color: rgb(190, 190, 190);
+  background-color: #bebebe;
   margin: auto;
   overflow: hidden;
   border-radius: 30px;
@@ -20,7 +20,8 @@
   z-index: 1;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1.1);
+  -webkit-transform: translate(-50%, -50%) scale(1.1);
+          transform: translate(-50%, -50%) scale(1.1);
 }
 
 @media (max-width: 670px) {
@@ -29,6 +30,7 @@
     height: 100%;
   }
 }
+
 .video_bug {
   width: 100%;
   height: auto;
@@ -40,8 +42,8 @@
   max-width: 685px;
   height: 500px;
   background-color: rgba(50, 50, 50, 0.7);
-  -webkit-backdrop-filter: blur(7px);
-          backdrop-filter: blur(7px);
+  -webkit-backdrop-filter: blur(9px);
+          backdrop-filter: blur(9px);
   border-radius: 30px;
   z-index: 2;
 }
@@ -73,7 +75,7 @@
 }
 
 .highlight {
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   color: black;
   padding: 5px 8px;
   border-radius: 15px;
@@ -104,6 +106,7 @@
   width: 100%;
   border-radius: 15px;
 }
+
 .warp_box:first-child {
   margin-top: 0;
 }
@@ -113,6 +116,7 @@
     width: calc(100% - 30px);
   }
 }
+
 .intro_big_text {
   font-family: "PyeongChangPeace-Bold";
   font-size: 23px;
@@ -137,11 +141,22 @@
 
 .warp_text_box {
   margin-left: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex: 2;
-  flex-direction: column;
-  justify-content: left;
-  align-items: left;
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
   height: 100%;
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -181,26 +196,42 @@
   float: left;
 }
 
+#umbrella {
+  color: white;
+  background: #667db6;
+  background: -webkit-gradient(linear, left top, right top, from(#667db6), color-stop(#0082c8), color-stop(#0082c8), to(#667db6));
+  background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
+  -webkit-box-shadow: 0px 7px 15px 2px rgba(102, 125, 182, 0.7);
+          box-shadow: 0px 7px 15px 2px rgba(102, 125, 182, 0.7);
+}
+
 #club {
   color: white;
-  background: #8E2DE2;
-  background: linear-gradient(to right, #4A00E0, #8E2DE2);
-  border: 1px solid rgb(210, 200, 255);
-  box-shadow: 0px 7px 15px 2px rgba(140, 45, 225, 0.7);
+  background: #8e2de2;
+  background: -webkit-gradient(linear, left top, right top, from(#4a00e0), to(#8e2de2));
+  background: linear-gradient(to right, #4a00e0, #8e2de2);
+  border: 1px solid #d2c8ff;
+  -webkit-box-shadow: 0px 7px 15px 2px rgba(140, 45, 225, 0.7);
+          box-shadow: 0px 7px 15px 2px rgba(140, 45, 225, 0.7);
 }
 
 #community {
   color: black;
   background: #0cebeb;
+  background: -webkit-gradient(linear, left top, right top, from(#29ffc6), color-stop(#20e3b2), to(#0cebeb));
   background: linear-gradient(to right, #29ffc6, #20e3b2, #0cebeb);
-  border: 1px solid rgb(25, 156, 123);
-  box-shadow: 0px 7px 15px 2px rgba(30, 230, 180, 0.7);
+  border: 1px solid #199c7b;
+  -webkit-box-shadow: 0px 7px 15px 2px rgba(30, 230, 180, 0.7);
+          box-shadow: 0px 7px 15px 2px rgba(30, 230, 180, 0.7);
 }
 
 #music {
   color: black;
   background: #11998e;
+  background: -webkit-gradient(linear, left top, right top, from(#38ef7d), to(#11998e));
   background: linear-gradient(to right, #38ef7d, #11998e);
   border: 1px solid #26a356;
-  box-shadow: 0px 7px 15px 2px rgba(34, 211, 102, 0.7);
-}/*# sourceMappingURL=Main.module.css.map */
+  -webkit-box-shadow: 0px 7px 15px 2px rgba(34, 211, 102, 0.7);
+          box-shadow: 0px 7px 15px 2px rgba(34, 211, 102, 0.7);
+}
+/*# sourceMappingURL=Main.module.css.map */
