--- a/styles/pages/Main/Main.module.scss
+++ b/styles/pages/Main/Main.module.scss
@@ -1,4 +1,4 @@
-@import '../../variables';
+@import "../../variables";
 
 // 메인 화면은 width: $page-width 로 통일할 것.
 
@@ -42,14 +42,14 @@
     max-width: $page-width;
     height: 500px;
     background-color: rgba(50, 50, 50, 0.7);
-    backdrop-filter: blur(7px);
+    backdrop-filter: blur(9px);
     border-radius: 30px;
     z-index: 2;
 }
 
 .video_text {
     text-align: left;
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-weight: 600;
     font-size: 22px;
     color: white;
@@ -60,7 +60,7 @@
 
 .video_top_text {
     text-align: left;
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-weight: 500;
     font-size: 16px;
     color: white;
@@ -118,7 +118,7 @@
 }
 
 .intro_big_text {
-    font-family: 'PyeongChangPeace-Bold';
+    font-family: "PyeongChangPeace-Bold";
     font-size: 23px;
     text-align: center;
     margin-top: 15px;
@@ -126,7 +126,7 @@
 }
 
 .intro_small_text {
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-size: 15px;
     text-align: center;
     margin-top: 10px;
@@ -146,7 +146,7 @@
 }
 
 .warp_small_text {
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-weight: 500;
     font-size: 16px;
     margin-top: 10px;
@@ -156,7 +156,7 @@
 }
 
 .warp_big_text {
-    font-family: 'pretendard';
+    font-family: "pretendard";
     font-weight: 700;
     font-size: 27px;
     margin-bottom: 10px;
@@ -178,11 +178,25 @@
     float: left;
 }
 
+#umbrella {
+    color: white;
+    background: #667db6;
+    background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
+    background: linear-gradient(
+        to right,
+        #667db6,
+        #0082c8,
+        #0082c8,
+        #667db6
+    );
+    box-shadow: 0px 7px 15px 2px rgba(102, 125, 182, 0.7);
+}
+
 #club {
     color: white;
-    background: #8E2DE2;
-    background: -webkit-linear-gradient(to right, #4A00E0, #8E2DE2);
-    background: linear-gradient(to right, #4A00E0, #8E2DE2);
+    background: #8e2de2;
+    background: -webkit-linear-gradient(to right, #4a00e0, #8e2de2);
+    background: linear-gradient(to right, #4a00e0, #8e2de2);
     border: 1px solid rgb(210, 200, 255);
     box-shadow: 0px 7px 15px 2px rgba(140, 45, 225, 0.7);
 }
